--- a/src/index.html
+++ b/src/index.html
@@ -118,7 +118,7 @@
     <div class="popup popup__confirm-delete" id="popupConfirmDeletePlace">
       <div class="popup__container">
         <h3 class="popup__title">Вы уверены?</h3>
-        <form class="form form__confirm-delete" name="popupConfirmDeletePlace" id="formConfirmDeletePlace">
+        <form class="popup__form form__confirm-delete" name="popupConfirmDeletePlace" id="formConfirmDeletePlace">
           <button class="popup__submit popup__button form__save-button"
             type="submit" name="delete-confirm-button" value="Да">Да
           </button>
@@ -133,7 +133,7 @@
     <!-- Добавить блоки со стилями -->
     <div class="popup popup_edit-avatar">
       <div class="popup__container">
-        <form class="form form_edit-avatar" name="editAvatarForm" id="editAvatarForm" novalidate>
+        <form class="popup__form form_edit-avatar" name="editAvatar" id="editAvatarForm" novalidate>
           <h3 class="popup__header popup__header_avatar">Обновить аватар</h3>
           <fieldset class="popup__fieldset" id="profileEditAvatarFieldset">
             <label class="popup__label">
