PR9 0.8 full of bugs

--- a/src/index.html
+++ b/src/index.html
@@ -37,7 +37,7 @@
         <button class="profile__button profile__button-add" type="button" aria-label="Добавить место"></button>
       </section>
 
-      <!-- В галерею подставляется дефольный набор карточек 4-6, их можно удалять добавлять новые -->
+      <!-- В галерею рендерится набор карточек с сервера, можно добавить, удалить свои -->
       <section class="gallery">
         <ul class="elements">
 
