--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="keywords" content="Россия, Место, JS, Яндекс, Практикум">
-    <meta name="description" content="Mesto | ПР8 | Яндекс Практикум">
+    <meta name="description" content="Mesto | ПР9 | Яндекс Практикум">
     <meta name="author" content="Кирилл Чистов">
 
     <!-- Отключаем вызов index.css, т.к. будет вызов через webpack -->
@@ -117,8 +117,8 @@
     <!-- Поп-ап с формой подтверждения удаления места -->
     <div class="popup popup__confirm-delete" id="popupConfirmDeletePlace">
       <div class="popup__container">
-        <h3 class="popup__title">Вы уверены?</h3>
-        <form class="popup__form form__confirm-delete" name="popupConfirmDeletePlace" id="formConfirmDeletePlace">
+        <h3 class="popup__header">Вы уверены?</h3>
+        <form class="popup__form popup__form__confirm-delete" name="popupConfirmDeletePlace" id="formConfirmDeletePlace">
           <button class="popup__submit popup__button form__save-button"
             type="submit" name="delete-confirm-button" value="Да">Да
           </button>
