--- a/src/index.html
+++ b/src/index.html
@@ -115,7 +115,7 @@
     <!-- / Поп-ап с формой добавления нового места -->
 
     <!-- Поп-ап с формой подтверждения удаления места -->
-    <div class="popup popup__confirm" id="popupConfirmDeletePlace">
+    <div class="popup" id="popupConfirmDeletePlace">
       <div class="popup__container">
         <h3 class="popup__header">Вы уверены?</h3>
         <form class="popup__form popup__form_confirm_delete" name="popupConfirmDeletePlace" id="formConfirmDeletePlace">
