PR9 3.0 fixing against review 2

--- a/src/index.html
+++ b/src/index.html
@@ -67,7 +67,8 @@
                      required minlength="2" maxlength="200" placeholder="Профессия">
               <span class="popup__field-error profile-job-error">Введите профиль пользователя</span>
             </label>
-            <input class="popup__submit popup__button popup__submit_profile" type="submit" value="Сохранить" id="btnPopupProfileSubmit">
+            <button class="popup__submit popup__button popup__submit_profile" type="submit" 
+              value="Сохранить" id="btnPopupProfileSubmit">Сохранить</button>
           </fieldset>
         </form>
       </div>
@@ -105,8 +106,8 @@
                        required placeholder="Ссылка на иллюстрацию" name="link" id="new-card-source">
                 <span class="popup__field-error new-card-source-error">Введите URL картинки</span>
               </label>
-              <input class="popup__submit popup__button" type="submit" value="Сохранить" id="btnPopupAddPlaceSubmit"
-                     name="new-card-save-button" disabled >
+              <button class="popup__submit popup__button" type="submit" value="Сохранить" id="btnPopupAddPlaceSubmit"
+                     name="new-card-save-button" disabled >Сохранить</button>
             </fieldset>
           </form>
         </div>
